clusters/aks-tap-build/cluster-config/dependent-resources/general/app-sso-example.yaml
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: test-application
#  namespace: workload-corby
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      name: test-application
#  template:
#    metadata:
#      labels:
#        name: test-application
#    spec:
#      containers:
#        - image: bitnami/oauth2-proxy:7.3.0
#          name: proxy
#          ports:
#            - containerPort: 4180
#              name: proxy-port
#              protocol: TCP
#          env:
#            - name: ISSUER_URI
#              valueFrom:
#                secretKeyRef:
#                  name: my-client-registration
#                  key: issuer-uri
#            - name: CLIENT_ID
#              valueFrom:
#                secretKeyRef:
#                  name: my-client-registration
#                  key: client-id
#            - name: CLIENT_SECRET
#              valueFrom:
#                secretKeyRef:
#                  name: my-client-registration
#                  key: client-secret
#          command: [ "oauth2-proxy" ]
#          args:
#            - --oidc-issuer-url=$(ISSUER_URI)
#            - --client-id=$(CLIENT_ID)
#            - --insecure-oidc-skip-issuer-verification=true
#            - --client-secret=$(CLIENT_SECRET)
#            - --cookie-secret=0000000000000000
#            - --cookie-secure=false
#            - --http-address=http://:4180
#            - --provider=oidc
#            - --scope=openid email profile roles
#            - --email-domain=*
#            - --insecure-oidc-allow-unverified-email=true
#            - --oidc-groups-claim=roles
#            - --upstream=http://127.0.0.1:8000
#            - --redirect-url=https://spring-sensors-sso.tap.corby.page/oauth2/callback
#            - --skip-provider-button=true
#            - --pass-authorization-header=true
#            - --prefer-email-to-user=true
#        - image: python:3.9
#          name: application
#          resources:
#            limits:
#              cpu: 100m
#              memory: 100Mi
#          command: [ "python" ]
#          args:
#            - -c
#            - |
#              from http.server import HTTPServer, BaseHTTPRequestHandler
#              import base64
#              import json
#
#              class Handler(BaseHTTPRequestHandler):
#                  def do_GET(self):
#                      if self.path == "/token":
#                          self.token()
#                          return
#                      else:
#                          self.greet()
#                          return
#
#                  def greet(self):
#                      username = self.headers.get("x-forwarded-user")
#                      self.send_response(200)
#                      self.send_header("Content-type", "text/html")
#                      self.end_headers()
#                      page = f"""
#                      <h1>It Works!</h1>
#                      <p>You are logged in as <b>{username}</b></p>
#                      """
#                      self.wfile.write(page.encode("utf-8"))
#
#                  def token(self):
#                      token = self.headers.get("Authorization").split("Bearer ")[-1]
#                      payload = token.split(".")[1]
#                      decoded = base64.b64decode(bytes(payload, "utf-8") + b'==').decode("utf-8")
#                      self.send_response(200)
#                      self.send_header("Content-type", "application/json")
#                      self.end_headers()
#                      self.wfile.write(decoded.encode("utf-8"))
#
#              server_address = ('', 8000)
#              httpd = HTTPServer(server_address, Handler)
#              httpd.serve_forever()

---
apiVersion: v1
kind: Service
metadata:
  name: test-application
  namespace: workload-corby
spec:
  ports:
    - port: 80
      targetPort: 4180
  selector:
    name: test-application

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: test-application
  namespace: workload-corby
spec:
  virtualhost:
    fqdn: spring-sensors-sso.tap.corby.page
    tls:
      secretName: contour-tls/tls
  routes:
    - conditions:
        - prefix: /
      services:
        - name: test-application
          port: 80
